[project]
name = "quant-finance-notebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "arviz>=0.16.0",
    "jax>=0.4.30",
    "matplotlib>=3.9.4",
    "numpy<2.0.0",
    "numpyro>=0.19.0",
    "scipy>=1.12.0,<1.13.0",
]
